@@ -32,8 +32,8 @@
     <p>
       The bug tracking system is located at the following web site:
       <samp>
-	<a href="http://ace.cs.wustl.edu/bugzilla/">
-	  http://ace.cs.wustl.edu/bugzilla/
+	<a href="http://deuce.doc.wustl.edu/bugzilla/">
+	  http://deuce.doc.wustl.edu/bugzilla/
 	</a>
       </samp>
 
@@ -93,7 +93,7 @@
     <address><a href="mailto:othman@cs.wustl.edu">Ossama Othman</a></address>
 <!-- Created: Wed Aug 18 14:45:31 EDT 1999 -->
 <!-- hhmts start -->
-Last modified: Wed Aug 18 22:53:21 EDT 1999
+Last modified: Wed Nov 14 21:36:32 Pacific Standard Time 2001
 <!-- hhmts end -->
     <br>
     Back to <a href="index.html">ACE Documentation Home</a>.
